[package]
name = "ggez_gpu_leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "ggez_video"
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "ggez_video_tests"

[dependencies]
ffmpeg-next = "6.0.0"
ggez = "0.9.0"
wgpu = "0.16.1"
